agregando seccion y estilos

--- a/js-ejercicios/piedra-papel-tijeras-advance/index.html
+++ b/js-ejercicios/piedra-papel-tijeras-advance/index.html
@@ -16,11 +16,12 @@
     <h1>ADVANCE </h1>
 
   </div>
+<div class="main-content">
 
   <section class="main-game">
       <div class="select-figure" id="app">
           
-        <p class="info-text">SELECIONA TU FAVORITA</p>
+        <p class="info-text">SELECCIONA TU FAVORITA</p>
           
           <div class="button-frame">
             <button id="buttonSelect1" class="button-game" value="piedra">PIEDRA</button>
@@ -35,11 +36,21 @@
           </div>
       </div>
 
-          <div class="button-frame">
-            <button id="buttonSelect4" class="button-game" value="0">Jugar de nuevo</button>
-          </div>
+      <div class="select-option">
+        <button id="buttonSelect5" class="button-game" value="0">JUGAR !</button>
+        <button id="buttonSelect4" class="button-game" value="0">Jugar de nuevo</button>
+
+      </div>
+
   </section>
   
+  <section class="result-game">
+    <div class="result-play">
+      <p class="result-text">EL GANADOR</p>
+    </div>
+  </section>
+
+</div>
   <script type="module" src="js/controller.js"></script>
 </body>
 </html>
