correcion de DO

--- a/js-ejercicios/piedra-papel-tijeras-advance/index.html
+++ b/js-ejercicios/piedra-papel-tijeras-advance/index.html
@@ -24,21 +24,21 @@
         <p class="info-text">SELECCIONA TU FAVORITA</p>
           
           <div class="button-frame">
-            <button id="buttonSelect1" class="button-game" value="piedra">PIEDRA</button>
+            <button class="buttonGame" value="piedra">PIEDRA</button>
           </div>
           
           <div class="button-frame">
-            <button id="buttonSelect2" class="button-game" value="papel">PAPEL</button>
+            <button class="buttonGame" value="papel">PAPEL</button>
           </div>
 
           <div class="button-frame">
-            <button id="buttonSelect3" class="button-game" value="tijeras">TIJERAS</button>
+            <button class="buttonGame" value="tijeras">TIJERAS</button>
           </div>
       </div>
 
       <div class="select-option">
-        <button id="buttonSelect5" class="button-game" value="0">JUGAR !</button>
-        <button id="buttonSelect4" class="button-game" value="0">Jugar de nuevo</button>
+        <button id="buttonSelect" class="buttonGame" value="0">JUGAR !</button>
+        <button id="buttonSelect" class="buttonGame" value="0">Jugar de nuevo</button>
 
       </div>
 
