funcion de juego implementado

--- a/js-ejercicios/piedra-papel-tijeras-advance/index.html
+++ b/js-ejercicios/piedra-papel-tijeras-advance/index.html
@@ -42,29 +42,29 @@
 
         <div class="player">
             <div class="button-frame">
-              <button class="buttonGame" value="piedra">PIEDRA</button>
+              <button class="buttonGame2" value="piedra">PIEDRA</button>
             </div>
             
             <div class="button-frame">
-              <button class="buttonGame" value="papel">PAPEL</button>
+              <button class="buttonGame2" value="papel">PAPEL</button>
             </div>
 
             <div class="button-frame">
-              <button class="buttonGame" value="tijeras">TIJERAS</button>
+              <button class="buttonGame2" value="tijeras">TIJERAS</button>
             </div>
         </div>
 
       </div>
 
-      <div class="select-option"  id="app">
-        <button id="buttonSelect" class="buttonGame" value="0">JUGAR !</button>
+      <div class="select-option">
+        <button id="buttonSelect" class="buttonGamePlay" value="play">JUGAR !</button>
         <button id="buttonSelect" class="buttonGame" value="0">Jugar de nuevo</button>
 
       </div>
 
   </section>
   
-  <section class="result-game">
+  <section class="result-game" id="app">
     <div class="result-play">
       <p class="result-text">EL GANADOR</p>
     </div>
