--- a/js-ejercicios/piedra-papel-tijeras-advance/index.html
+++ b/js-ejercicios/piedra-papel-tijeras-advance/index.html
@@ -58,7 +58,7 @@
 
       <div class="select-option">
         <button id="buttonSelect" class="buttonGamePlay" value="play">JUGAR !</button>
-        <button id="buttonSelect" class="buttonGame" value="0">Jugar de nuevo</button>
+        <button id="buttonReset" class="buttonGamePlay" value="reinicio">Jugar de nuevo</button>
 
       </div>
 
