logica: sin jugadas default

--- a/js-ejercicios/piedra-papel-tijeras-advance/index.html
+++ b/js-ejercicios/piedra-papel-tijeras-advance/index.html
@@ -57,7 +57,7 @@
       </div>
 
       <div class="select-option">
-        <button id="buttonSelect" class="buttonGamePlay" value="play">JUGAR !</button>
+        <button id="buttonSelect" class="buttonGamePlay" value="play" disabled>JUGAR !</button>
         <button id="buttonReset" class="buttonGamePlay" value="reinicio">Jugar de nuevo</button>
 
       </div>
