--- a/js-ejercicios/piedra-papel-tijeras-advance/index.html
+++ b/js-ejercicios/piedra-papel-tijeras-advance/index.html
@@ -38,6 +38,14 @@
             <div class="button-frame">
               <button class="buttonGame" value="tijeras">TIJERAS</button>
             </div>
+
+            <div class="button-frame">
+              <button class="buttonGame" value="serpiente">SERPIENTE</button>
+            </div>
+            
+            <div class="button-frame">
+              <button class="buttonGame" value="humano">HUMANO</button>
+            </div>
         </div>
 
         <div class="player">
@@ -51,6 +59,14 @@
 
             <div class="button-frame">
               <button class="buttonGame2" value="tijeras">TIJERAS</button>
+            </div>
+
+             <div class="button-frame">
+              <button class="buttonGame2" value="serpiente">SERPIENTE</button>
+            </div>
+            
+            <div class="button-frame">
+              <button class="buttonGame2" value="humano">HUMANO</button>
             </div>
         </div>
 
